kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amazon-clone
  labels:
    app: amazon-clone
